--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <form id="login-form">
   <input
       maxlength="15"
       required
-      type="text" placeholder="what is your name?">
-  <button>Login</button>
+      type="text"
+      placeholder="what is your name?">
 </form>
+<h1 id="greeting" class="hidden">test</h1>
 <script src="index.js"></script>
 </body>
 </html>
