--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<form id="login-form">
+<form id="login-form" class="hidden">
   <input
       maxlength="15"
       required
       type="text"
       placeholder="what is your name?">
 </form>
-<h1 id="greeting" class="hidden">test</h1>
+<h1 id="greeting" class="hidden"></h1>
 <script src="index.js"></script>
 </body>
 </html>
