--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
 <form id="login-form" class="hidden">
@@ -14,6 +14,8 @@
       placeholder="what is your name?">
 </form>
 <h1 id="greeting" class="hidden"></h1>
-<script src="index.js"></script>
+<h2 id="clock"></h2>
+<script src="js/clock.js"></script>
+<script src="js/greeting.js"></script>
 </body>
 </html>
