--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 <h2 id="clock"></h2>
 <script src="js/clock.js"></script>
 <script src="js/greeting.js"></script>
+<script src="js/quotes.js"></script>
 </body>
 </html>
