--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
       type="text"
       placeholder="what is your name?">
 </form>
-<h1 id="greeting" class="hidden"></h1>
 <h2 id="clock"></h2>
+<h1 id="greeting" class="hidden"></h1>
+<div id="quote">
+    <span></span>
+    <span></span>
+</div>
 <script src="js/clock.js"></script>
 <script src="js/greeting.js"></script>
 <script src="js/quotes.js"></script>
