--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       placeholder="what is your name?">
 </form>
 <h2 id="clock"></h2>
+<form id="todo-form">
+    <input type="text" placeholder="Write a To Do and Press Enter"/>
+</form>
 <h1 id="greeting" class="hidden"></h1>
 <div id="quote">
     <span></span>
@@ -22,5 +25,6 @@
 <script src="js/clock.js"></script>
 <script src="js/greeting.js"></script>
 <script src="js/quotes.js"></script>
+<script src="js/background.js"></script>
 </body>
 </html>
