--- a/index.html
+++ b/index.html
@@ -1,34 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-<form id="login-form" class="hidden">
-  <input
-      maxlength="15"
-      required
-      type="text"
-      placeholder="what is your name?">
-</form>
-<h2 id="clock"></h2>
-<form id="todo-form">
-    <input type="text" placeholder="Write a To Do and Press Enter"/>
-</form>
-<ul id="todo-list">
-
-</ul>
-<h1 id="greeting" class="hidden"></h1>
-<div id="quote">
-    <span></span>
-    <span></span>
-</div>
-<script src="js/clock.js"></script>
-<script src="js/greeting.js"></script>
-<script src="js/quotes.js"></script>
-<script src="js/background.js"></script>
-<script src="js/todo.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Title</title>
+        <link rel="stylesheet" href="style/style.css" />
+    </head>
+    <body>
+        <form id="login-form" class="hidden">
+            <input maxlength="15" required type="text" placeholder="what is your name?" />
+        </form>
+        <h2 id="clock"></h2>
+        <form id="todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter" />
+        </form>
+        <ul id="todo-list"></ul>
+        <h1 id="greeting" class="hidden"></h1>
+        <div id="quote">
+            <span></span>
+            <span></span>
+        </div>
+        <script src="js/clock.js"></script>
+        <script src="js/greeting.js"></script>
+        <script src="js/quotes.js"></script>
+        <script src="js/background.js"></script>
+        <script src="js/todo.js"></script>
+        <script src="js/weather.js"></script>
+    </body>
 </html>
